<resources>
    <string name="app_name">mobv-team-7</string>
    <string name="register">Register</string>
    <string name="register_title">Sign up to become a member</string>
    <string name="profile">Profile</string>
    <string name="record_video">Record video</string>
    <string name="show_video">Show video</string>
    <string name="login_name">Login name</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">E-mail</string>
    <string name="username">Username</string>
    <string name="empty_error">Field must not be empty</string>
    <string name="custom_controller_rewind_video">rewind video</string>
    <string name="custom_controller_play_video">play video</string>
    <string name="custom_controller_pause_video">pause video</string>
    <string name="custom_controller_forward_video">forward video</string>
    <string name="custom_controller_video_progress">/</string>
    <string name="video_button">Floating Action Video Button</string>
	<string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="profile_picture">profile picture</string>
    <string name="log_out">Log out</string>
    <string name="change_password">Change password</string>
    <string name="save_profile_changes">Save profile changes</string>
    <string name="edit_profile_picture">Edit Profile Picture</string>
    <string name="upload_from_gallery">Upload from gallery</string>
    <string name="delete">Delete</string>
    <string name="video_record">Record</string>
    <string name="show_posts">Show Posts</string>
    <string name="save">SAVE</string>
    <string name="welcome_back">Welcome Back,</string>
    <string name="login_to_continue">Login to continue</string>
    <string name="new_user_register">New user? Register</string>
    <string name="already_a_member_login">Already a member? Login</string>
    <string name="email_icon">Email Icon</string>
</resources>