<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <!-- Data to make available to the XML via data binding. In this case,
         the whole ViewModel, so that we can access the LiveData,
         click handlers, and state variables. -->
    <data>
        <variable
            name="profileViewModel"
            type="sk.stuba.mobv_team_7.password.PasswordViewModel" />
    </data>

    <!-- Start of the visible fragment layout using ConstraintLayout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".password.PasswordFragment">

        <TextView
            android:id="@+id/oldPasswordText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginTop="148dp"
            android:labelFor="@id/editTextOldPassword"
            android:text="@string/old_password"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editTextOldPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:endIconMode="password_toggle"
            app:layout_constraintStart_toStartOf="@id/oldPasswordText"
            app:layout_constraintTop_toBottomOf="@id/oldPasswordText">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextOldPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="15"
                android:inputType="textPassword"
                android:text="" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/newPasswordText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:labelFor="@id/editTextNew"
            android:text="@string/new_password"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/editTextOldPassword"
            app:layout_constraintTop_toBottomOf="@+id/editTextOldPassword" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editTextNew"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:endIconMode="password_toggle"
            app:layout_constraintStart_toStartOf="@+id/newPasswordText"
            app:layout_constraintTop_toBottomOf="@+id/newPasswordText">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextNewPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="15"
                android:inputType="textPassword"
                android:text="" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/buttonChange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/change_password"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="@+id/editTextNew"
            app:layout_constraintHorizontal_bias="0.533"
            app:layout_constraintStart_toStartOf="@+id/editTextNew"
            app:layout_constraintTop_toBottomOf="@+id/editTextNew" />


    </androidx.constraintlayout.widget.ConstraintLayout>



</layout>